--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     },
     "jest": {
         "setupFiles": [
-            "./jest.js"
+            "./jestSetup.js"
         ]
     },
     "keywords": [],
